# pedais

./: Pedal.spec  README.md  app.py  app.spec  layout_config.py  licence.txt  shortcuts.json  stupe.iss
backend/: audio_interface.py  audio_processor.py  audio_recorder.py  effects_config.py  main.py
backend/effects/: Afinador.py  BOSS_BF_2_Flanger.py  CaineOldSchoolReverb.py  CarmillaDistortion.py  PureSky.py  Ultra_Flanger_UF100.py  VintageOverdrive.py  VintageOverdrive.pyx  chorus.py  chorusCE2.py  compressor_guitarra.py  delay.py  distortion.py  equalizer.py  fuzz.py  overdrive.py  pedal_control.py  reverb.py  setup.py  tremolo.py  tuner.py  wahwah.py
backend/effects/cpp_effects/: Afinador.cpp  BOSS_BF_2_Flanger.cpp  CMakeLists.txt  CarmillaDistortion.cpp  PureSky.cpp  Ultra_Flanger_UF100.cpp  VintageOverdrive.cpp  bindings.cpp  chorus.cpp  chorusCE2.cpp  compressor_guitarra.cpp  delay.cpp  distortion.cpp  effects_cpp.cp312-win_amd64.pyd  equalizer.cpp  fuzz.cpp  overdrive.cpp  pedal_control.cpp  reverb.cpp  setup.py  tremolo.cpp  tuner.cpp  wahwah.cpp
backend/effects/cpp_effects/cpp_effects.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
backend/pedal_configs/: __init__.py
backend/voz/: NoiseReducer.py  PitchCorrection.py  PitchShift.py  PopClickSuppressor.py  Reverb_voz.py  VocalDeesser.py  Vocal_Compressor.py  Vocal_Delay.py  Vocal_Tremolo.py  Vocal_equalizer.py  audio_interface.py  effects_config.py  effects_voz.py  main_voice_app.py  voz_control.py
frontend/css/: style.css
ui/: Mini_play.py  audio_recorder.py  drag_manager.py  shortcut_window.py
(+12 files in other folders)
